started almost from scratch,implemented hardcoded first scenario generated and cleaned gitignore, cleaned pom.xml, created class for testing O in the centre and classes to make test pass